--- a/css/compiled/concat/acbTest_cat.css
+++ b/css/compiled/concat/acbTest_cat.css
@@ -12,6 +12,7 @@ font-family: 'Bodoni';
 font-family:'MyriadProSemibold';
 font-family:'MyriadProLight';
 font-family:'MyriadProRegular';
+font-family: 'Bodoni Condensed'; (ttf only)
 */
 @font-face {
   font-family: 'MyriadProSemibold';
@@ -34,48 +35,70 @@ font-family:'MyriadProRegular';
   src: url("/fonts/myriadpro-regular-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/myriadpro-regular-webfont.woff") format("woff"), url("/fonts/myriadpro-regular-webfont.ttf") format("truetype"), url("/fonts/myriadpro-regular-webfont.svg#webfontOtLQ4vAf") format("svg");
   /* Legacy iOS */
 }
+@font-face {
+  font-family: 'Bodoni Condensed';
+  src: url("/fonts/BOD_CR.ttf") format("truetype");
+  /* Test Note: This is the only source file available, may not render in old IE or OperaMini */
+}
 /* Variables */
 /* globals */
 /* Structure */
-html {
-  background: #fff url("/images/bg_main_top_icons.png") no-repeat top center;
-}
-html .wrapper {
+.wrapper {
   width: 100%;
-}
-html .topMesg {
-  height: 29px;
   overflow: hidden;
+}
+
+.mainColumn {
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.topMesg {
+  height: 29px;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  z-index: 100;
+  margin: 0 auto;
   background: #212121;
   border-bottom: 1px solid #3a3a3a;
   color: #fff;
+  z-index: 100;
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
 }
-html .topMesg .contPdg {
+.topMesg .contPdg {
   width: 1085px;
   margin: 0 auto;
   line-height: 29px;
   text-align: center;
 }
-html .topMesg h2 {
+.topMesg h2 {
   margin: 0;
   font-weight: normal;
   font-family: arial,helvatica,sans-serif;
   font-size: 14px;
+  letter-spacing: .5px;
 }
-html .topMesg h2 strong {
+.topMesg h2 strong {
   font-weight: bold;
 }
-html .topMesg .warn_yellow {
+.topMesg .warn_yellow {
   color: #fff348;
 }
-html .topMesg .warn_red {
+.topMesg .warn_red {
   color: #d10000;
 }
-html h1 {
+
+h1 {
   color: #000;
   font-family: 'MyriadProRegular',serif;
 }
 
+.section {
+  position: relative;
+}
 .section .contPdg .col {
   position: relative;
 }
@@ -83,6 +106,7 @@ html h1 {
   min-height: 200px;
   float: left;
   width: 770px;
+  margin-top: 30px;
 }
 .section .cols2.col2 {
   width: 315px;
@@ -99,6 +123,9 @@ html h1 {
 
 .section1 {
   min-height: 516px;
+  width: 1085px;
+  margin: 0 auto;
+  position: relative;
 }
 .section1 .contPdg {
   width: 1085px;
@@ -108,12 +135,29 @@ html h1 {
 }
 .section1 #photoMain {
   float: left;
-  margin-left: -15px;
+}
+
+.bgMain {
+  position: absolute;
+  top: 2px;
+  left: -607px;
+}
+
+.socialIconsLeft {
+  position: absolute;
+  left: -442px;
+  top: 47px;
+}
+
+.socialIconsRight {
+  position: absolute;
+  right: -560px;
+  top: 47px;
 }
 
 .section2 {
-  min-height: 900px;
-  background: url("/images/bg_section2_top.png") no-repeat top center;
+  min-height: 1200px;
+  background: url("/images/bg_section2_top.png") no-repeat center 184px;
 }
 .section2 .contPdg {
   width: 1085px;
@@ -124,16 +168,21 @@ html h1 {
 
 #photoMain {
   float: left;
+  margin-left: 10px;
 }
 
 .blurb.mainPromo {
-  margin: 26px 15px 0 0;
-  font-family: 'Bodoni Book';
+  margin: 15px 0 0 0;
+  font-family: 'Bodoni Condensed',sans-serif;
   font-weight: normal;
-  font-size: 46px;
-  line-height: 52px;
+  font-size: 67px;
+  line-height: 59px;
   text-align: center;
-  letter-spacing: -0.75px;
+  letter-spacing: -1px;
+  position: absolute;
+  width: 440px;
+  height: 180px;
+  right: -12px;
 }
 
 /*# sourceMappingURL=acbTest.css.map */
